<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="account_currency_format">Balance: %.2f$</string>
    <string name="achievement_10000dollarWon_description">You won 10000$</string>
    <string name="achievement_10000dollarWon_name">10000$ won</string>
    <string name="achievement_1000dollarLost_description">You lost 1000$</string>
    <string name="achievement_1000dollarLost_name">1000$ lost</string>
    <string name="achievement_100dollarWon_description">You won 100$</string>
    <string name="achievement_100dollarWon_name">100$ won</string>
    <string name="achievement_10differentSharesInDepot_description">You have ten different shares in your depot</string>
    <string name="achievement_10differentSharesInDepot_name">Ten different shares in depot</string>
    <string name="achievement_10dollarWon_description">You won 10$</string>
    <string name="achievement_10dollarWon_name">10$ won</string>
    <string name="achievement_10sharesInDepot_description">You have ten shares in your depot</string>
    <string name="achievement_10sharesInDepot_name">Ten shares in depot</string>
    <string name="achievement_1shareInDepot_description">You have one share in your depot</string>
    <string name="achievement_1shareInDepot_name">One share in depot</string>
    <string name="achievement_20000dollarWon_description">You won 20000$</string>
    <string name="achievement_20000dollarWon_name">20000$ won</string>
    <string name="achievement_200dollarLeft_description">You only have $200 left</string>
    <string name="achievement_200dollarLeft_name">200$ left</string>
    <string name="achievement_40000dollarWon_description">You won 40000$</string>
    <string name="achievement_40000dollarWon_name">40000$ won</string>
    <string name="achievement_500dollarWon_description">You won 500$</string>
    <string name="achievement_500dollarWon_name">500$ won</string>
    <string name="achievement_5differentSharesInDepot_description">You have five different shares in your depot</string>
    <string name="achievement_5differentSharesInDepot_name">Five different shares in depot</string>
    <string name="achievement_5sharesInDepot_description">You have five shares in your depot</string>
    <string name="achievement_5sharesInDepot_name">Five shares in depot</string>
    <string name="achievement_image_description">Image of the achievement</string>
    <string name="add_fingerprint">Add fingerprint authentication</string>
    <string name="amount_format">Amount: %s</string>
    <string name="app_name">Stock Simulator</string>
    <string name="article_header_image">Article header image.</string>
    <string name="attribution_coingecko"><a href="https://www.coingecko.com/en">Data provided by CoinGecko</a></string>
    <string name="attribution_iex"><a href="https://iexcloud.io">Data provided by IEX Cloud</a></string>
    <string name="biometric_cancelled">Fingerprint authentication has been canceled!</string>
    <string name="biometric_error_fingerprint_not_available">Device has no fingerprints registered!</string>
    <string name="biometric_error_hardware_not_supported">Device does not contain any fingerprint sensors!</string>
    <string name="biometric_error_permission_not_granted">USE_BIOMETRIC permission are not granted!</string>
    <string name="biometric_error_sdk_not_supported">SDK does not support biometric authentication!</string>
    <string name="biometric_failure">Biometric authentication failed!</string>
    <string name="biometric_success">Fingerprint authenticated successfully!</string>
    <string name="buy">Buy</string>
    <string name="buy_hint">Buy amount</string>
    <string name="cancel">Cancel</string>
    <string name="cashflow_format">Cashflow: %.2f$</string>
    <string name="currency_format_long">%s$</string>
    <string name="currency_format_short">%.2f$</string>
    <string name="data_reset_success">Data reset successfully.</string>
    <string name="date_format">Date: %s</string>
    <string name="depot_currency_format">Depot: %.2f$</string>
    <string name="details">Details</string>
    <string name="dialog_title_confirm_buy_transaction">Execute buy transaction?</string>
    <string name="dialog_title_confirm_sell_transaction">Execute sell transaction?</string>
    <string name="double_buy_amount_format">%f bought</string>
    <string name="double_depot_quote_amount_format">%f in depot</string>
    <string name="double_depot_quote_format">%1$s - %2$f</string>
    <string name="double_sell_amount_format">%f sold</string>
    <string name="empty_hint">It\'s empty in here!</string>
    <string name="invalid_news_url">News URL is invalid</string>
    <string name="long_buy_amount_format" tools:ignore="PluralsCandidate">%d bought</string>
    <string name="long_depot_quote_amount_format">%d in depot</string>
    <string name="long_depot_quote_format">%1$s - %2$d</string>
    <string name="long_sell_amount_format" tools:ignore="PluralsCandidate">%d sold</string>
    <string name="no_connection">Unable to reach the server. Check your connection.</string>
    <string name="no_results">No results</string>
    <string name="not_defined">N/D</string>
    <string name="paywall_indicator">Paywall indicator.</string>
    <string name="performance">Performance: </string>
    <string name="performance_format_loss">%.2f%%</string>
    <string name="performance_format_neutral">%.2f%%</string>
    <string name="performance_format_win">+%.2f%%</string>
    <string name="prefs_fingerprint_added">prefs_fingerprint_added</string>
    <string name="prefs_fingerprint_status_fingerprint">There is no fingerprint registered in Android.</string>
    <string name="prefs_fingerprint_status_hardware">Your device does not have a fingerprint sensor.</string>
    <string name="prefs_fingerprint_status_permissions">Insufficient permissions for biometric authentication.</string>
    <string name="prefs_fingerprint_status_sdk">Your Android version does not support fingerprint authentication.</string>
    <string name="price_format">Price: %s$</string>
    <string name="query">Symbol or Name</string>
    <string name="read_full_article">Read full article</string>
    <string name="refresh_symbols">Refresh Symbols</string>
    <string name="refreshing_symbols">Refreshing Symbols.</string>
    <string name="remove_fingerprint">Remove fingerprint authentication</string>
    <string name="reset_data">Reset data</string>
    <string name="sell">Sell</string>
    <string name="sell_all">Sell all</string>
    <string name="sell_hint">Sell amount</string>
    <string name="stockbrot_add_control_quote">Add to Stockbrot</string>
    <string name="stockbrot_quote_buying_amount_format_double">Buying %1$s at %2$s$</string>
    <string name="stockbrot_quote_buying_amount_format_long">Buying %1$d at %2$s$</string>
    <string name="stockbrot_quote_buying_format">Buying at %s$</string>
    <string name="stockbrot_quote_selling_format">Selling at %s$</string>
    <string name="stockbrot_remove_control_quote">Remove quote from stockbrot</string>
    <string name="stockbrot_threshold_buy">Maximum Buy Price</string>
    <string name="stockbrot_threshold_sell">Minimum Sell Price</string>
    <string name="symbols_refresh_success">Symbols refreshed successfully.</string>
    <string name="title_account">Account</string>
    <string name="title_achievements">Achievements</string>
    <string name="title_auto_buy_sell">Auto buy/sell</string>
    <string name="title_history">History</string>
    <string name="title_news">News</string>
    <string name="title_quote">Quote</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_stockbrot">Stockbrot</string>
    <string name="total_price_format">Total: %.2f$</string>
    <string name="transaction_costs_format">Transaction costs: %.2f$</string>
    <string name="transaction_format_loss">%.2f$</string>
    <string name="transaction_format_neutral">%.2f$</string>
    <string name="transaction_format_win">+%.2f$</string>
    <string name="transaction_type_image_description">Image of the transaction type</string>
    <string name="trend_image_description">Trend image</string>
    <string-array name="type_filter_array">
        <item>Any</item>
        <item>Shares</item>
        <item>Crypto</item>
    </string-array>
    <string name="unable_to_fetch_news">Unable to fetch news.</string>
    <string name="unable_to_fetch_quote_information">Unable to fetch quote information.</string>
    <string name="unable_to_fetch_symbols">Unable to fetch symbols.</string>
    <string name="yes">Yes</string>
</resources>
