<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_balance_black_24dp"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_stockbrot"
        android:icon="@drawable/ic_adb_black_24dp"
        android:title="@string/title_stockbrot" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/title_settings" />

</menu>
