<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_account"
        android:name="de.uniks.codliners.stock_simulator.ui.account.AccountFragment"
        android:label="@string/title_account" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="de.uniks.codliners.stock_simulator.ui.history.HistoryFragment"
        android:label="@string/title_history" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="de.uniks.codliners.stock_simulator.ui.search.SearchFragment"
        android:label="@string/title_search" />
    <fragment
        android:id="@+id/navigation_stockbrot"
        android:name="de.uniks.codliners.stock_simulator.ui.stockbrot.StockbrotFragment"
        android:label="@string/title_stockbrot" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="de.uniks.codliners.stock_simulator.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />
</navigation>