<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="de.uniks.codliners.stock_simulator.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/refresh_symbols_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:layout_marginTop="@dimen/default_spacing"
            android:layout_marginEnd="@dimen/default_spacing"
            android:enabled="@{!viewModel.refreshing}"
            android:onClick="@{() -> viewModel.refreshSymbols()}"
            android:text="@string/refresh_symbols"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/settings_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:layout_marginTop="@dimen/default_spacing"
            android:layout_marginEnd="@dimen/default_spacing"
            android:onClick="@{() -> viewModel.resetGame()}"
            android:text="@string/reset_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/refresh_symbols_button" />

        <Button
            android:id="@+id/settings_fingerprint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:layout_marginTop="@dimen/default_spacing"
            android:layout_marginEnd="@dimen/default_spacing"
            android:onClick="@{() -> viewModel.toggleFingerprint()}"
            android:text="@string/add_fingerprint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_reset" />

        <TextView
            android:id="@+id/settings_fingerprint_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/default_spacing"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_fingerprint" />

        <TextView
            android:id="@+id/coingecko_attribution_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_spacing"
            android:text="@string/attribution_coingecko"
            app:layout_constraintBottom_toTopOf="@+id/iex_attribution_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/iex_attribution_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_spacing"
            android:text="@string/attribution_iex"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>