<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="de.uniks.codliners.stock_simulator.repository.SearchRepository.State" />

        <variable
            name="viewModel"
            type="de.uniks.codliners.stock_simulator.ui.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:hint="@string/query"
            android:id="@+id/search_query_edit_text"
            android:importantForAutofill="no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:layout_marginTop="@dimen/default_spacing"
            android:layout_marginEnd="@dimen/default_spacing"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewModel.searchQuery}"
            app:layout_constraintEnd_toStartOf="@+id/search_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_spacing"
            android:enabled="@{viewModel.searchQuery.length() > 0}"
            android:onClick="@{() -> viewModel.search()}"
            android:text="@string/title_search"
            app:layout_constraintBaseline_toBaselineOf="@+id/search_query_edit_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/search_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:layout_marginTop="@dimen/default_spacing"
            android:layout_marginEnd="@dimen/default_spacing"
            android:layout_marginBottom="@dimen/default_spacing"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_query_edit_text"
            app:searchState="@{viewModel.searchState}" />

        <TextView
            android:id="@+id/state_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:layout_marginTop="@dimen/default_spacing"
            android:layout_marginEnd="@dimen/default_spacing"
            android:layout_marginBottom="@dimen/default_spacing"
            android:text="@string/no_results"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_query_edit_text"
            app:searchState="@{viewModel.searchState}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_result_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:layout_marginTop="@dimen/default_spacing"
            android:layout_marginEnd="@dimen/default_spacing"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_query_edit_text"
            app:searchResults="@{viewModel.searchResults}"
            app:spanCount="3"
            app:visible="@{viewModel.searchResults.size() > 0}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>