<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="de.uniks.codliners.stock_simulator.ui.quote.QuoteViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:onRefresh="@{() -> viewModel.refresh()}"
        app:refreshing="@{viewModel.refreshing}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:visible="@{viewModel.quote != null}">

            <TextView
                android:id="@+id/share_id_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_spacing"
                android:layout_marginTop="@dimen/default_spacing"
                android:text="@{viewModel.quote.symbol}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/share_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_spacing"
                android:layout_marginTop="@dimen/default_spacing"
                android:text="@{viewModel.quote.companyName}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/share_id_text" />

            <TextView
                android:id="@+id/share_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_spacing"
                android:layout_marginEnd="@dimen/default_spacing"
                android:text="@{String.valueOf(viewModel.quote.latestPrice)}"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/share_running_cost_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_spacing"
                android:layout_marginEnd="@dimen/default_spacing"
                android:text="@{String.valueOf(viewModel.quote.change)}"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/share_value_text" />

            <Button
                android:id="@+id/buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_spacing"
                android:enabled="@{viewModel.canBuy}"
                android:onClick="@{() -> viewModel.buy()}"
                android:text="@string/buy"
                app:layout_constraintBaseline_toBaselineOf="@+id/buy_number"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/sell_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_spacing"
                android:enabled="@{viewModel.canSell}"
                android:onClick="@{() -> viewModel.sell()}"
                android:text="@string/sell"
                app:layout_constraintBaseline_toBaselineOf="@+id/sell_number"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/buy_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_spacing"
                android:layout_marginTop="@dimen/default_spacing"
                android:layout_marginEnd="@dimen/default_spacing"
                android:ems="10"
                android:hint="@string/buy_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@={viewModel.buyAmount}"
                app:layout_constraintEnd_toStartOf="@+id/buy_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/share_name_text" />

            <EditText
                android:id="@+id/sell_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_spacing"
                android:layout_marginTop="@dimen/default_spacing"
                android:layout_marginEnd="@dimen/default_spacing"
                android:hint="@string/sell_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@={viewModel.sellAmount}"
                app:layout_constraintEnd_toStartOf="@+id/sell_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buy_number" />

            <TextView
                android:id="@+id/depot_text"
                visible="@{viewModel.depotQuote != null}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_spacing"
                android:layout_marginTop="@dimen/default_spacing"
                android:text="@{@plurals/depot_quote_amount_format((int) viewModel.depotQuote.amount, (int) viewModel.depotQuote.amount)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sell_number" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>