<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="expanded"
            type="Boolean" />

        <variable
            name="onClickListener"
            type="de.uniks.codliners.stock_simulator.ui.OnClickListener" />

        <variable
            name="dateString"
            type="String" />

        <variable
            name="news"
            type="de.uniks.codliners.stock_simulator.domain.News" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_spacing"
        android:onClick="@{() -> onClickListener.onClick(news)}"
        app:cardCornerRadius="@dimen/default_corner_radius"
        app:cardElevation="@dimen/default_elevation"
        app:contentPadding="@dimen/half_spacing">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/news_paywall_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/paywall_indicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:paywallType="@{news.hasPaywall}"
                app:srcCompat="@drawable/ic_adb_black_24dp" />

            <TextView
                android:id="@+id/news_headline"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="@dimen/default_spacing"
                android:layout_marginBottom="16dp"
                android:text="@{news.headline}"
                app:layout_constraintBottom_toBottomOf="@+id/expand_toggle_button"
                app:layout_constraintEnd_toStartOf="@+id/expand_toggle_button"
                app:layout_constraintStart_toEndOf="@+id/news_paywall_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Headline" />

            <ToggleButton
                android:id="@+id/expand_toggle_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_expand_toggle_24dp"
                android:checked="@={expanded}"
                android:text=""
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="@+id/news_headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_body_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_spacing"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/news_headline"
                app:visible="@{expanded}">

                <ImageView
                    android:id="@+id/news_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/article_header_image"
                    android:src="@{news.image}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/news_date"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{dateString}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/news_image"
                    tools:text="date" />

                <TextView
                    android:id="@+id/news_source"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{news.source}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/news_date"
                    tools:text="source" />

                <TextView
                    android:id="@+id/news_summary"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{news.summary}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/news_source"
                    tools:text="A short summary." />

                <Button
                    android:id="@+id/news_openArticle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/read_full_article"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/news_summary" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>